module/openapi-annotations/plugin/src/test/resources/net/jacobpeterson/jet/openapiannotations/plugin/testproject/success/emptynovalidation/src/main/java/Test.java
import net.jacobpeterson.jet.openapiannotations.annotation.OpenApi;
import org.jspecify.annotations.NullMarked;

@NullMarked
@OpenApi
public final class Test {}
