module/openapi-annotations/plugin/src/test/resources/net/jacobpeterson/jet/openapiannotations/plugin/testproject/fail/arraycontainsmorethanoneelement/src/main/java/Test.java
import net.jacobpeterson.jet.openapiannotations.annotation.OpenApi;
import net.jacobpeterson.jet.openapiannotations.annotation.OpenApiComponents;
import org.jspecify.annotations.NullMarked;

@NullMarked
@OpenApi(components = {@OpenApiComponents(), @OpenApiComponents()})
public final class Test {}
